# IREM_ISM_case

./: .gitignore  README.md
.github/workflows/: deploy.yml
Plan/: DATA_MODEL.md  problem_ideation.md  tech_decisions.md
Plan/Wireframes/: .thumbnail  Wireframes Malaria.dc.html  colombia-departments.js
Plan/Wireframes/_ds/ism-malaria-design-system-6c9de888-3ba0-40ee-801d-e22045173b35/: _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
Plan/Wireframes/_ds/ism-malaria-design-system-6c9de888-3ba0-40ee-801d-e22045173b35/tokens/: colors.css  elevation.css  fonts.css  spacing.css  typography.css
db/: README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt
db/malaria_db/: __init__.py  database.py  enums.py  models.py  seed.py  seed_data.py
db/migrations/: env.py
scr/: Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
scr/api/: mobile-fetch.ts  mobile-photos.ts  mobile-upload.ts  ocr.ts  send-email.ts
scr/ocr-tools/: pyproject.toml
scr/src/: App.tsx  types.ts
scr/src/app/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
scr/src/components/: StatusBadge.tsx  Toast.tsx
scr/src/data/: colombia-departments.ts  mock.ts
scr/src/features/api/: ApiPage.tsx
scr/src/features/dashboard/: DashboardPage.tsx
scr/src/features/review/: ReviewPage.tsx
scr/src/features/search/: SearchPage.tsx
scr/src/features/upload/: MobilePhotoPage.tsx  UploadPage.tsx
scr/src/styles/: global.css
