[project]
name = "malaria-db"
version = "0.1.0"
description = "Esquema y seed de la base de datos de vigilancia de malaria (ISM/RMEI)"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    "python-dotenv>=1.0.1",
    "passlib[argon2]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["malaria_db"]
